Add color input

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     </head>
     <body>
         <h1>Color Picker</h1>
+
+        <div class="salida" id="salida"></div>
+
+        <form>
+            <input type="color">
+        </form>
         
     </body>
 </html>
