--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
+        <!-- Normalize -->
+        <link rel="stylesheet" href="/styles/normalize.css">
         <!-- Styles -->
         <link href="styles/style.css" rel="stylesheet"/>
     </head>
