--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <h1>Color Picker</h1>
 
-        <div class="salida" id="salida"></div>
+        <p class="exit" id="exit">#000000</p>
 
         <form>
             <input type="color">
