Add and link app.js

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
         <link href="styles/style.css" rel="stylesheet"/>
     </head>
     <body>
-        <h1>Color Picker</h1>
-
-        <p class="exit" id="exit">#000000</p>
-
-        <form>
-            <input type="color">
-        </form>
+        <main>
+            <h1>Color Picker</h1>
+            <div class="exit" id="exit">
+                <p>#000000</p>
+            </div>
+            <form>
+                <input type="color">
+            </form>
+        </main>
         
+        <!-- Scripts -->
+        <script src="js/app.js"></script>
     </body>
 </html>
