add event to change hexadecimal color text

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <body>
         <main>
             <h1>Color Picker</h1>
-            <div class="exit" id="exit">
+            <div id="exit" class="exit">
                 <p>#000000</p>
             </div>
-            <form>
-                <input type="color">
+            <form id="form">
+                <input id="color" type="color">
             </form>
         </main>
         
