Add icon and text shadow to hexadecimal color text

--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Color Picker</title>
+
+        <!-- Icon -->
+        <link rel="icon" href="assets/js.ico"/>
+        
         <!-- Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
 
         <!-- Normalize -->
         <link rel="stylesheet" href="/styles/normalize.css">
         <!-- Styles -->
-        <link href="styles/style.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="styles/style.css"/>
     </head>
     <body>
         <main>
             <h1>Color Picker</h1>
             <div id="exit" class="exit">
-                <p>#000000</p>
+                <p>#ffffff</p>
             </div>
             <form id="form">
-                <input id="color" type="color">
+                <input id="color" type="color" value="#ffffff">
             </form>
         </main>
         
