--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </main>
         
         <!-- Scripts -->
+        <script src="js/local-storage.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
