Added section of saved colors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="styles/style.css"/>
     </head>
     <body>
-        <main>
+        <main class="main">
             <h1>Color Picker</h1>
             <div id="exit" class="exit">
                 <p>#ffffff</p>
@@ -29,6 +29,14 @@
                 <input id="color" type="color" value="#ffffff">
             </form>
         </main>
+        
+        <section class="container flex__section">
+            <div class="colorTest">#111</div>
+            <div class="colorTest">#111</div>
+            <div class="colorTest">#111</div>
+            <div class="colorTest">#111</div>
+            <div class="colorTest">#111</div>
+        </section>
         
         <!-- Scripts -->
         <script src="js/local-storage.js"></script>
