Add Color Class

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <section class="container flex__section" id="colorSection"></section>
         
         <!-- Scripts -->
+        <script src="js/Color.js"></script>
         <script src="js/local-storage.js"></script>
         <script src="js/app.js"></script>
     </body>
